--- a/pe-self-healing/workflow.yaml
+++ b/pe-self-healing/workflow.yaml
@@ -32,6 +32,9 @@ triggers:
       body: !Data body
       host: !Data host
 steps:
+- name: echo
+  image: relaysh/stdlib-step-echo
+  message: "testing if this works"
 - name: notify-workflow
   image: relaysh/slack-step-message-send
   spec:
