--- a/pe-self-healing/workflow.yaml
+++ b/pe-self-healing/workflow.yaml
@@ -34,7 +34,8 @@ triggers:
 steps:
 - name: echo
   image: relaysh/stdlib-step-echo
-  message: "testing if this works"
+  spec:
+    message: "testing if this works"
 - name: notify-workflow
   image: relaysh/slack-step-message-send
   spec:
