--- a/pe-self-healing/workflow.yaml
+++ b/pe-self-healing/workflow.yaml
@@ -45,6 +45,10 @@ steps:
 - name: approval
   type: approval
   description: "Wait for approval to run task-updated version"
+- name: echo
+  image: relaysh/stdlib-step-echo
+  spec:
+    message: "testing adding new steps and messages from source control"
 - name: update-event-timeline
   image: relaysh/datadog-step-event-post
   spec:
