--- a/pe-self-healing/workflow.yaml
+++ b/pe-self-healing/workflow.yaml
@@ -32,6 +32,10 @@ triggers:
       body: !Data body
       host: !Data host
 steps:
+- name: echo
+  image: relaysh/stdlib-step-echo
+  spec:
+    message: "testing adding new steps and messages from source control with my wonderful new friends"
 - name: notify-workflow
   image: relaysh/slack-step-message-send
   spec:
